[tool.poetry]
name = "logic-challenge-blackjack-minigame"
version = "1.0.0"
description = "A logic challenge that emulates a blackjack game match"
authors = ["Ralph Santos Souza"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
